deployments/node-app/be-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: back-end-ingress
  labels:
    name: back-end
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: back.mytoolings.xyz
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: back-end-svc
            port: 
              number: 80
